syntax = "proto3";

package hero.v1alpha;

message Hero {
  string name = 1;
  int32 id = 2;
  int32 power = 3;
  int32 hp = 4;
}

service HeroCRUDService {
  rpc Get (GetRequest) returns (GetResponse);
  rpc Add (AddRequest) returns (AddResponse);
  rpc Update (UpdateRequest) returns (UpdateResponse);
  rpc Delete (DeleteRequest) returns (DeleteResponse);
}

message GetRequest {
  string name = 1;
  int32 id = 2;
}

message GetResponse {
  repeated Hero heroes = 1;
}

message AddRequest {
  string name = 1;
  int32 power = 2;
}

message AddResponse {
  Hero hero = 1;
}

message UpdateRequest {
  int32 id = 1;

  string name = 2;
  int32 power = 3;
  int32 hp = 4;
}

message UpdateResponse {
  Hero hero = 1;
}

message DeleteRequest {
  int32 id = 1;
}

message DeleteResponse {
  Hero hero = 1;
}



